replacing PDF and updated grey.css

--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                         <p class="text-center ">
                             I have saturated half-year experience with programming web-applications. I want to become a
                             strong developer in the shortest time. In this way, I’m spending a lot of time for
-                            self-education and trying to be always in progress. In addition, there are no problem from
-                            me to be a part of team.
+                            self-education and trying to be always in progress. In addition, I can easily and with joy become a part of the team.
                         </p>
 
                         <div class="row hidden-print">
@@ -820,7 +819,7 @@
                             <ul class="col-md-12 col-sm-12 col-xs-12 text-center list-inline">
                                 <li class="interest-topic">
                                     <i class="ion-laptop"></i>
-                                    <span>Computers inside</span>
+                                    <span>Computers</span>
                                 </li>
                                 <li class="interest-topic">
                                     <i class="ion-code-working"></i>
