optimizing code & files

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <meta name="format-detection" content="telephone=no">
 
     <title>Klyaplskyi Mykhailo CV</title>
-    <link rel="stylesheet" href="css/map.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/mat.css">
-    <link rel="stylesheet" href="css/font-aw.css">
-    <link rel="stylesheet" href="css/icons.css">
-    <link rel="stylesheet" href="css/grey.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/mat.min.css">
+    <link rel="stylesheet" href="css/font-aw.min.css">
+    <link rel="stylesheet" href="css/icons.min.css">
+    <link rel="stylesheet" href="css/grey.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -931,13 +930,13 @@
 
 
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPF7Hg8-3OR8PDvsyhSXGdBp7ykNNSYLg"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPF7Hg8-3OR8PDvsyhSXGdBp7ykNNSYLg"></script>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.filteryzr.min.js"></script>
-    <script src="js/mat.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/mat.min.js"></script>
+    <script src="js/custom.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/map.js" async></script>
 
