--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <title>Klyaplskyi Mykhailo CV</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/mat.min.css">
-    <link rel="stylesheet" href="css/font-aw.min.css">
-    <link rel="stylesheet" href="css/icons.min.css">
-    <link rel="stylesheet" href="css/grey.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/mat.css">
+    <link rel="stylesheet" href="css/font-aw.css">
+    <link rel="stylesheet" href="css/icons.css">
+    <link rel="stylesheet" href="css/grey.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
