--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <meta name="format-detection" content="telephone=no">
 
     <title>Klyaplskyi Mykhailo CV</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/mat.css">
     <link rel="stylesheet" href="css/font-aw.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/grey.css">
     <link rel="stylesheet" href="css/animate.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -935,9 +935,9 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.filteryzr.min.js"></script>
-    <script src="js/mat.min.js"></script>
-    <script src="js/custom.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/mat.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/map.js" async></script>
 
 </body>
