add sdk.finance experience

--- a/index.html
+++ b/index.html
@@ -178,6 +178,26 @@
 
                                     <!-- Heading -->
                                     <div class="timeline-header">
+                                        <h3 class="text-capitalize">SDK.Finance</h3>
+                                    </div>
+
+                                    <!-- Organization and Period -->
+                                    <p class="sub-heading">Front-end Developer</p>
+                                    <p class="sub-heading">since March 2019</p>
+
+                                    <!-- Job Summary -->
+                                    <p class="content-p">
+                                        Creation of web-wallet service. Almostly using Vue.js, SCSS, JS (DNA Protected)
+                                    </p>
+                                </div>
+                            </li>
+
+                            <li class="card" data-aos="fade-up">
+                                <i class="title-icon fa fa-circle"></i>
+                                <div class="timeline-content">
+
+                                    <!-- Heading -->
+                                    <div class="timeline-header">
                                         <h3 class="text-capitalize">Idea Bank</h3>
                                     </div>
 
@@ -190,7 +210,7 @@
                                         Optimizing e-commerce monitoring with using JS, PHP, SQL skills. Making more
                                         useable web-application for inside documentation and reports. There are also
                                         some commercial cases for analytics and e-commerce monitoring with using HTML,
-                                        CSS, JS, SQL, PHP, Node.js (Confidential)
+                                        CSS, JS, SQL, PHP, Node.js (DNA Protected)
                                     </p>
                                 </div>
                             </li>
@@ -227,7 +247,7 @@
 
                                     <!-- Organization and Period -->
                                     <p class="sub-heading">Front-end Developer</p>
-                                    <p class="sub-heading">since August 2018</p>
+                                    <p class="sub-heading">August 2018 - December 2018</p>
 
                                     <!-- Job Summary -->
                                     <p class="content-p">
@@ -334,7 +354,7 @@
                         </div>
                         <div class="skill-progress-div">
                             <!-- Add Skill -->
-                            <p>React.js<span>JQuery</span></p>
+                            <p>React.js<span>Vue.js</span></p>
                         </div>
                         <div class="skill-progress-div">
                             <!-- Add Skill -->
