--- a/index.html
+++ b/index.html
@@ -888,23 +888,23 @@
                         <ul class="text-center center-block" data-aos="fade" data-aos-delay="200" data-aos-offset="0">
                             <li>
                                 <i class="ion-android-call center-block"></i>
-                                <span>+38 067 249 77 12</span>
+                                <span><a href="tel:+380672497712">+38 067 249 77 12</a></span>
                             </li>
                             <li>
                                 <i class="ion-ios-chatboxes center-block"></i>
-                                <span>+38 067 249 77 12</span>
+                                <span><a href="tel:+380672497712">+38 067 249 77 12</a></span>
                             </li>
                             <li>
                                 <i class="ion-email center-block"></i>
-                                <span>klypalskyi@gmail.com</span>
+                                <span><a href="mailto:klypalskyi@gmail.com">klypalskyi@gmail.com</a></span>
                             </li>
                             <li>
                                 <i class="ion-earth center-block"></i>
-                                <span>klypalskyi.hithub.io/CV</span>
+                                <span><a href="https://klypalskyi.github.io/CV/index.html">klypalskyi.github.io/CV</a></span>
                             </li>
                             <li>
                                 <i class="ion-ios-location center-block"></i>
-                                <span>8-B Pushkinska st., Kyiv</span>
+                                <span><a href="https://www.google.com.ua/maps/@50.4468425,30.5181328,19.5z?hl=ru&authuser=0" target="blank">8-B Pushkinska st., Kyiv</a></span>
                             </li>
                         </ul>
 
