--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                     </div>
 
                                     <!-- Organization and Period -->
-                                    <p class="sub-heading">Front-end Developer</p>
+                                    <p class="sub-heading">Full-stack Developer</p>
                                     <p class="sub-heading">since September 2018</p>
 
                                     <!-- Job Summary -->
@@ -346,21 +346,25 @@
                             <!-- Add Skill -->
                             <p>HTML5<span>CSS3</span></p>
                         </div>
-                        <div class="skill-progress-div">
+    					<div class="skill-progress-div">
                             <!-- Add Skill -->
-                            <p>ECMA Script 6<span>GIT</span></p>
+                            <p>ES 6<span>GIT</span></p>
                         </div>
-                        <div class="skill-progress-div">
+    					<div class="skill-progress-div">
                             <!-- Add Skill -->
-                            <p>React.js<span>Vue.js</span></p>
+                            <p>Vanilla JS<span>Node.js</span></p>
                         </div>
-                        <div class="skill-progress-div">
+    					<div class="skill-progress-div">
                             <!-- Add Skill -->
-                            <p>REST API<span>AJAX</span></p>
+                            <p>Vue.js<span>AJAX</span></p>
                         </div>
-                        <div class="skill-progress-div">
+    					<div class="skill-progress-div">
                             <!-- Add Skill -->
-                            <p>Node.js<span>SQL</span></p>
+                            <p>REST API<span>PHP</span></p>
+                        </div>
+    					<div class="skill-progress-div">
+                            <!-- Add Skill -->
+                            <p>SQL</p>
                         </div>
                     </div>
                 </div>
@@ -372,7 +376,7 @@
 
                         <div class="skill-progress-div">
                             <!-- Add Skill -->
-                            <p>Responsable</p>
+                            <p>Responsable<span>Fast learning</span></p>
                         </div>
 
                         <div class="skill-progress-div">
@@ -390,6 +394,10 @@
                         <div class="skill-progress-div">
                             <!-- Add Skill -->
                             <p>Analytical Skill</p>
+                        </div>
+                        <div class="skill-progress-div">
+                            <!-- Add Skill -->
+                            <p></br></p>
                         </div>
                     </div>
                 </div>
@@ -411,6 +419,10 @@
                         <div class="skill-progress-div">
                             <!-- Add Skill -->
                             <p>Russian</p>
+                        </div>
+                        <div class="skill-progress-div">
+                            <!-- Add Skill -->
+                            <p></br></p>
                         </div>
                         <div class="skill-progress-div">
                             <!-- Add Skill -->
@@ -902,7 +914,7 @@
                             </li>
                             <li>
                                 <i class="ion-ios-location center-block"></i>
-                                <span><a href="https://www.google.com.ua/maps/@50.4468425,30.5181328,19.5z?hl=ru&authuser=0" target="blank">8-B Pushkinska st., Kyiv</a></span>
+                                <span><a href="https://goo.gl/maps/ex16tQFQiWbcK1cM8" target="blank">18 Dragomanova st., Kyiv</a></span>
                             </li>
                         </ul>
 
