--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
                         <div class="skill-progress-div">
                             <!-- Add Skill -->
-                            <p>Responsable<span>Fast learning</span></p>
+                            <p>Responsable</p>
                         </div>
 
                         <div class="skill-progress-div">
@@ -397,7 +397,7 @@
                         </div>
                         <div class="skill-progress-div">
                             <!-- Add Skill -->
-                            <p></br></p>
+                            <p>Fast learning</p>
                         </div>
                     </div>
                 </div>
